// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountInfo \`methods\` onFormSubmit :: publishing analytics form is valid address has changed 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "action": "save_accountinfo_changes",
        "category": "account",
        "event": "trackEvent",
        "label": "submit",
      },
    ],
    [
      {
        "action": "account info",
        "category": "my account",
        "event": "trackEvent",
        "label": "address change intent",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`AccountInfo \`methods\` onFormSubmit :: publishing analytics form is valid address has not changed 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "action": "save_accountinfo_changes",
        "category": "account",
        "event": "trackEvent",
        "label": "submit",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
